build: home layout

--- a/src/assets/i18n/fr.json
+++ b/src/assets/i18n/fr.json
@@ -1,6 +1,7 @@
 {
 	"HOME": {
-		"play": "Jouer"
+		"playAnonymous": "Jouer une partie rapide",
+		"trySignIn": "Ou connectez-vous pour gardez une trace de vos scores"
 	},
 	"GAME": {
 		"start": "Commencer la partie"
