--- a/src/assets/i18n/fr.json
+++ b/src/assets/i18n/fr.json
@@ -1,9 +1,16 @@
 {
+	"TOOLBAR": {
+		"register": "Connectez-vous",
+		"logout": "Déconnexion"
+	},
 	"HOME": {
 		"playAnonymous": "Jouer une partie rapide",
 		"trySignIn": "Ou connectez-vous pour gardez une trace de vos scores"
 	},
 	"GAME": {
 		"start": "Commencer la partie"
+	},
+	"SHARED": {
+		"facebookConnect": "Se connecter avec facebook"
 	}
 }
