feat(7): twitter auth

--- a/src/assets/i18n/fr.json
+++ b/src/assets/i18n/fr.json
@@ -11,7 +11,8 @@
 		"start": "Commencer la partie"
 	},
 	"SHARED": {
-		"facebookConnect": "Se connecter avec facebook"
+		"facebookConnect": "Se connecter avec facebook",
+		"twitterConnect": "Se connecter avec twitter"
 	},
 	"SNACKBAR": {
 		"queueSuccess": "Vous avez été ajouté à la file d'attente pour rejoindre une partie. Veuillez patienter."
