feat(21): toolbar ui

--- a/src/assets/i18n/fr.json
+++ b/src/assets/i18n/fr.json
@@ -1,5 +1,7 @@
 {
 	"TOOLBAR": {
+		"gameMenu": "Partie en cours",
+		"leaderboardMenu": "Classement",
 		"register": "Connectez-vous",
 		"logout": "Déconnexion"
 	},
